# blue-pill-two-wheel

./: .cproject  .gitignore  .gitmodules  .mxproject  .project  CMakeLists.txt  CMakeLists_template.txt  Makefile  Makefile.incl  README.md  bluepill2wheel.ioc  bluepill2wheel.xml  cmake_install.cmake  example.gdbinit
Inc/: main.h  stm32f1xx_it.h
Src/: main.c  stm32f1xx_hal_msp.c  stm32f1xx_hal_timebase_tim.c  stm32f1xx_it.c
balancebot/: balance_main.cpp  balance_main.h  encoder.cpp  encoder.h  main.c  motor.cpp  motor.h  tilt_sensor.cpp  tilt_sensor.h  wheel.cpp  wheel.h
cubemx/: .mxproject  cubemx.ioc
cubemx/Inc/: FreeRTOSConfig.h  main.h  stm32f1xx_hal_conf.h  stm32f1xx_it.h
cubemx/Src/: main.c  main.c_backup  stm32f1xx_hal_msp.c
docs/: 1000_2500_0_e25_ef400.txt  accel_gyro.txt  pinouts.md  ssd1306_oled.md
src/: default_task.c  led.c  led.h  main.c  main_task.c  oled.c  oled.h  ps2.c  ps2.h
tools/: example.gdbinit  jlink.sh  plot.py
